Fixed required double click on checkbox to work on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,12 @@ body {
   background-color: var(--background);
 }
 
+@media only screen and (max-width: 700px) {
+  body {
+    font-size: 18px;
+  }
+}
+
 h1,
 h2,
 h3,
@@ -410,6 +416,51 @@ body.dark .dark-theme-toggle-circle {
     padding-top: 70px !important;
   }
 }
+
+.hamburger {
+  width: 25px;
+  height: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  z-index: 9999;
+  cursor: pointer;
+}
+
+.bar {
+  height: 3px;
+  width: 100%;
+  border-radius: 2px;
+  background-color: var(--text);
+  transition: 0.5s cubic-bezier(0.5, -1, 0.5, 1.5);
+}
+
+.open-menu ~ .top-nav .bar-1 {
+  transform: rotate(-45deg) translate(-6px, 6.5px);
+  -webkit-transform: rotate(-45deg) translate(-6px, 6.5px);
+  -moz-transform: rotate(-360deg) translate(-6px, 6.5px);
+  -ms-transform: rotate(-360deg) translate(-6px, 6.5px);
+  -o-transform: rotate(-360deg) translate(-6px, 6.5px);
+}
+
+.open-menu ~ .top-nav .bar-2 {
+  transform: translateX(-15px);
+  -webkit-transform: translateX(-15px);
+  -moz-transform: translateX(-15px);
+  -ms-transform: translateX(-15px);
+  -o-transform: translateX(-15px);
+  background-color: transparent !important;
+  box-shadow: none;
+}
+
+.open-menu ~ .top-nav .bar-3 {
+  transform: rotate(45deg) translate(-6px, -6.5px);
+  -webkit-transform: rotate(45deg) translate(-6px, -6.5px);
+  -moz-transform: rotate(360deg) translate(-6px, -6.5px);
+  -ms-transform: rotate(360deg) translate(-6px, -6.5px);
+  -o-transform: rotate(360deg) translate(-6px, -6.5px);
+}
+
 /* -------------------------- MAIN CONTENT --------------------------*/
 
 main {
@@ -469,50 +520,6 @@ h2 {
     padding: 0px;
     font-size: 1.3em;
   }
-}
-
-.hamburger {
-  width: 25px;
-  height: 20px;
-  flex-direction: column;
-  justify-content: space-between;
-  position: fixed;
-  z-index: 9999;
-  cursor: pointer;
-}
-
-.bar {
-  height: 3px;
-  width: 100%;
-  border-radius: 2px;
-  background-color: var(--text);
-  transition: 0.5s cubic-bezier(0.5, -1, 0.5, 1.5);
-}
-
-.open-menu ~ .top-nav .bar-1 {
-  transform: rotate(-45deg) translate(-6px, 6.5px);
-  -webkit-transform: rotate(-45deg) translate(-6px, 6.5px);
-  -moz-transform: rotate(-360deg) translate(-6px, 6.5px);
-  -ms-transform: rotate(-360deg) translate(-6px, 6.5px);
-  -o-transform: rotate(-360deg) translate(-6px, 6.5px);
-}
-
-.open-menu ~ .top-nav .bar-2 {
-  transform: translateX(-15px);
-  -webkit-transform: translateX(-15px);
-  -moz-transform: translateX(-15px);
-  -ms-transform: translateX(-15px);
-  -o-transform: translateX(-15px);
-  background-color: transparent !important;
-  box-shadow: none;
-}
-
-.open-menu ~ .top-nav .bar-3 {
-  transform: rotate(45deg) translate(-6px, -6.5px);
-  -webkit-transform: rotate(45deg) translate(-6px, -6.5px);
-  -moz-transform: rotate(360deg) translate(-6px, -6.5px);
-  -ms-transform: rotate(360deg) translate(-6px, -6.5px);
-  -o-transform: rotate(360deg) translate(-6px, -6.5px);
 }
 
 /* -------------------------- NEW TASK CONTAINER --------------------------*/
@@ -837,9 +844,11 @@ input[type="text"]:focus-visible {
   background-color: var(--background);
 }
 
-.task-container:hover {
-  background-color: var(--background-hover);
-  border-radius: 5px;
+@media only screen and (min-width: 701px) {
+  .task-container:hover {
+    background-color: var(--background-hover);
+    border-radius: 5px;
+  }
 }
 
 .task-container:hover .edit-task-button,
